--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,3 +10,4 @@ article{padding:24px 0}
 figcaption {color: #888; font: 12px/1.5 monospace; text-align: center;}
 figure {margin: auto}
 img {display: block; max-width: 100%; height: auto; margin: auto}
+.ascii-art {font-family: 'MS PGothic', monospace; white-space: pre;}
